# cdn

./: .gitignore  Cargo.toml  Rocket.toml  build.sh  clean.sh  readme.md  rocket.toml
back/: Cargo.toml
back/src/: cache.rs  catchers.rs  error.rs  main.rs  response.rs  routes.rs
back/src/routes/: dashboard.rs  download.rs  upload.rs
examples/: basic.sh  download.sh  json.sh  parse.py  upload.sh
examples/assets/: file.txt
front/: Cargo.toml
front/src/: main.rs
scripts/: build_back.sh  build_front.sh  clean.sh  dependency_checker.py  init.sh
shared/: Cargo.toml
shared/src/: data.rs
src/: basic.rs  cache.rs  data.rs  error.rs  json.rs  main.rs  response.rs  routes.rs
tests/: exec.bat  exec_json.bat  file.txt  json_value.rs
