[package]
name = "storage_server"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rbase64 = "2.0.3"
rocket = { version = "0.5.0", features = ["json"] }
uuid =  { version = "1.6.1", features = ["v4"] }
logger = {git = "https://github.com/Bowarc/Crates.git", package = "logger"}
time = {git = "https://github.com/Bowarc/Crates.git", package = "time"}
log = "0.4.20"
fern = "0.6.2"
chrono = "0.4.31"
brotli = "3.4.0"
regex = "1.10.2"
bincode = "1.3.3"
