[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.66"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
reqwest = "0.11.23"
anyhow = "1.0.79"
serde = { version = "1.0.194", features = ["derive"] }
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.66"
