[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="shared"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "zerocopy", "serde"] }
